Wed Nov 10 15:10:27 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc: removed vestigial references to MAX_MATCHES
	template variables in search_results_{header,footer}.
	* htdoc/attrs.html, cf_by{name,prog}.html: reran cf_generate.pl

	* htdoc/hts_form.html: add disclaimer about keywords parameter not
	being limited to meta keywords.

	* htdoc/meta.html: add description of "keywords" meta tag property.
	add links to keywords_factor & meta_description_factor attributes.

1999-11-10  Toivo Pedaste  <toivo@ucs.uwa.edu.au>

	* htdig/Retriever.cc : Ignore SIGPIPEs with persistant connections

	* htnet/HtHTTP.cc : Fix buffer overrun reading chunks

	* htdig/Document.cc : Make redirects work

	* htdig/Retriever.cc : Make valid URL checks apply to initial URL's
	particularly those from a previous run

	* htlib/Dictionary.cc : Fix memory deallocation error
	

Tue Nov 02 13:44:57 1999  Marcel Bosc  <bosc@ceic.com>

	* htsearch/Display.cc (setVariables): parentheses missing around ternary
	operator : confusion in priority with <<. 

Tue Nov 02 13:33:50 1999  Marcel Bosc  <bosc@ceic.com>

	* htsearch/Display.cc (hilight): changed static char * (!!) to const string,
	static char evaluated before configuration is loaded so config had no 
	effect + unnecesary conversion

Tue Nov 02 11:45:49 1999  Marcel Bosc  <bosc@ceic.com>

	* htword/WordKey.cc :  Cleaned up obsolete code now using *InSortOrder fcts
	and WordKeyInfo.sort[]
	* htword/WordKey : Added FirstSkipField :
	find first field that must be checked for skip
	* htword/WordKey (PrefixOnly): now returns OK/NOTOK, fixed bug which 
	made Walk loop over the whole db if the searchkey just had 
	a the "word" field defined
	* htword/WordKey.cc (Unpack): had forgten to: SetDefinedWordSuffix 
	* htword/WordKey.cc (operator >>): added check for very very long words
	(even if this should never happen)
	* htword/WordKey.cc (operators << >>): added <UNDEF> word suffix handling